[FIX] web: fa-trash padding in list view
This commit follows the list view renderer commit[1] which adapts the
vertical alignment inside the list view. Thus why this fix is in the 
same task.

The btn remove (trash icon) was set to a padding of five making it
not vertically align with the rest of the list view text.

This comes from commit[2] where the trash icon was moved to align with
the new "View" button, but it misaligned the icon in all the other
list views. Applying an align top on the "View" button instead allows
an even alignment with the rest of the text content of the list view.

[1]: odoo/odoo@62172737b689d08856f4ad3d3d49beb796c9f42e
[2]: odoo/odoo@258e6a019a21042bf4f6cf70fcce386d37afd50c

task-3557566

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -176,10 +176,6 @@
             cursor: pointer;
         }
 
-        .o_list_record_remove button, button {
-            padding-top: 5px;
-        }
-
         .o_keyboard_navigation {
             th:focus-within, td:focus-within {
                 --table-accent-bg: none;
